pycchdo/static/css/screen.css
/* ... */
#cchdo_menu li {
  /* Make all entries a little bigger */
  padding: 0 3.5em 0 0;
  position: relative;
  display: inline;
  text-transform: uppercase;
  z-index: 100;
  white-space: nowrap;
  line-height: 2em;
}
#cchdo_menu .expander,
#cchdo_menu #cchdo_menu_find,
#cchdo_menu #cchdo_menu_information {
  padding: 0;
}
#cchdo_menu #cchdo_menu_basins {
  padding: 0 3em;
}

#cchdo_menu li h1 { 
  display: inline;
}
/* reverse styling for submenu entries */
#cchdo_menu ul ul li {
  padding: 0;
  position: static;
  display: block;
  text-transform: none;
  height: 2em;
  line-height: 2em;
}
#cchdo_menu ul ul {
  visibility: hidden;
  position: absolute;
  width: 100%;
  left: 0; /* HACK force firefox to left align */
  -webkit-transition: background .2s ease;
  -moz-transition: background .2s ease;
  -o-transition: background .2s ease;
  transition: background .2s ease;
}
#cchdo_menu ul ul a {
  height: 100%;
  display: block;
  font-size: 1.05em;
}

/* level2 hl */
#cchdo_menu ul ul li.focus,
#cchdo_menu ul ul li:hover {
  background: #E8E8E8;
}
/* level2 link hl */
#cchdo_menu ul ul li a.focus,
#cchdo_menu ul ul li a:hover {
  background: #D8D8D8;
  color: #90A3D1;
}
/* level3 link reset */
#cchdo_menu ul ul li.focus ul a,
#cchdo_menu ul ul li:hover ul a {
  color: #000000;
}
#cchdo_menu ul ul ul a {
  font-size: 0.9em;
  padding-left: 1.5em;
}
#cchdo_menu ul ul ul {
  border-left: 1px solid #E4E4E4;
  position: static;
}
#cchdo_menu ul ul ul li.focus a,
#cchdo_menu ul ul ul li:hover a {
  background: #888888;
  color: #EEEEEE;
}

/* expands whole menu */
#cchdo_menu ul.open {
  height: 14.5em;
  padding-bottom: 0.1em;
  background: rgba(247, 247, 247, 0.6);
  -webkit-transition: height .1s ease;
  -moz-transition: height .1s ease;
  -o-transition: height .1s ease;
  transition: height .1s ease;
}
#cchdo_menu ul.open li ul li,
#cchdo_menu ul.open ul ul li {
  display: block;
  height: auto;
}
#cchdo_menu ul.open ul,
#cchdo_menu ul.open ul li ul {
  visibility: visible;
}
#cchdo_menu .expander a {
  width: 0;
  -webkit-transition: none;
  -moz-transition: none;
  -o-transition: none;
  transition: none;
}
#cchdo_menu .expander.lightup h1 {
  background: #F8F8D8;
  -webkit-transition: background .2s ease;
  -moz-transition: background .2s ease;
  -o-transition: background .2s ease;
  transition: background .2s ease;
}
#cchdo_menu .reverse.expander.more a {
  font-size: 0.95em;
  color: #7083C1;
  display: inline;
  background: none;
}

#gfooter {
  position: relative;
  bottom: 0;
  clear: both;
  margin: 1em 0;
}
#gfooter #screensize a {
  margin-left: 0.5em;
  float: left;
}
#screensize-full {
  display: none;
}
#screensize-mobile {
  display: inline;
}
#gcredit {
  color: #AAAAAA;
  text-align: center;
  font-size: 0.7em;
}
#gcredit a {
  white-space: nowrap;
}
#gcredit p {
  width: 62%;
  margin: 0 auto;
}
#gcredit #nsfcredit {
  font-size: 1.3em;
  text-align: center;
}
#footer_logos {
  position: absolute;
  top: 0;
  right: 0;
}
#footer_logos img {
  height: 40px;
}

.boxed { 
  background: #FEFEFE;
  line-height: 1.5em;
  position: relative;
  margin-bottom: 1em;
  z-index: 0;
}
.boxed > h1 {
  font-size: 1.3em;
  border-bottom: 1px solid #D0D0D0;
  background-color: #F0F0F0;
  position: relative;
  left: 0;
  right: 0;
  top: 0;
  padding: 0.5em;
  margin: 0;
}
.boxed .box_content {
  padding: 1em;
  position: relative;
}

/* Pagers */
.pager {
  text-align: center;
  margin: 0.5em 25em;
  border: 1px solid #EEEEEE;
  border-left: 0;
  border-right: 0;
}
.pager .pager_curpage,
.pager a.pager_link {
  display: inline-block;
  padding: 0.2em 0.5em;
  border-bottom: none;
}
.pager a:hover {
  text-shadow: 0 0 1em #CB4310;
  -webkit-transition: text-shadow .3s ease;
  -moz-transition: text-shadow .3s ease;
  -o-transition: text-shadow .3s ease;
  transition: text-shadow .3s ease;
}
.pager_curpage {
  font-size: 1.25em;
  color: #DDDDDD;
  vertical-align: -0.1em;
}

/* Denotes editable forms on any page */
.editor {
  background: #FFFFEE;
  clear: both;
  margin: 0.5em 0;
  padding: 0.5em 0;
  border: 1px solid #EEEEEE;
  border-left: 0;
  border-right: 0;
}
.editor.continued-top {
  border-bottom: 0;
}
.editor.continued {
  border: 0;
}
.editor.continued-bottom {
  border-top: 0;
}

/* search_adv */
#content.search_adv .box_content {
  padding-top: 0.3em;
}
.search_adv h2 {
	font-size: 1.2em;
  margin-top: 0.5em;
}
.search_adv h3 {
  margin-top: 0.5em;
}
.search_adv table {
	position: relative;
	left: 10px;
}
.search_adv td {
	padding: 0.1em;
	padding-right: 0.4em;
	text-align: right;
}
.search_adv table input[type="search"] {
  width: 20em;
}
.search_adv .date_slider {
  position: relative;
  width: 40em;
  margin: 0.2em auto 1em 1em;
}
.search_adv .date_slider .text-fields {
  margin-bottom: 0.5em;
}
.search_adv .date_slider .search_date {
  text-align: center;
  width: 6.5em;
}
.search_adv .date_slider .max {
  position: absolute;
  right: 0;
}
.search_adv #date_to_date {
	position: absolute;
	left: 19em;
	right: 20em;
	text-align: center;
}
.search_adv .timeline {
  position: absolute;
}
.search_adv #timeline1 {
  position: static;
}
.search_adv #timeline2 {
  right: 75%;
}
.search_adv #timeline3 {
  right: 50%;
}
.search_adv #timeline4 {
  right: 25%;
}
.search_adv #timeline5 {
  right: 0;
}

/* Carina */
#carina-about p {
  margin: 0.5em auto;
}

/* Attribute notes */
table.notes {
  width: 100%;
}
.notes .note {
  border-top: 1px solid rgba(208, 208, 208, 0.5);
}
.notes .note .person,
.notes .note .date {
  width: 11em;
  font-size: 0.8em;
}
.notes .note .person {
  text-align: right;
  padding-right: 1em;
}
.notes .note.discussion {
  color: rgba(255, 100, 0, 0.7);
}
.notes .note.add-note td {
  vertical-align: baseline;
}
.notes .note textarea {
  width: 100%;
  min-height: 6em;
}

.search-results h2 {
  font-size: 1.3em;
}
.search-results h3 {
  margin-top: 0.5em;
}
.search-results .cruise-listing {
  margin-bottom: 1em;
}
/* ... */

